--- a/joiningData.Rmd
+++ b/joiningData.Rmd
@@ -1,29 +1,19 @@
----
-title: "Joining data from the Understanding Society"
-author: "Alexey Bessudnov"
-date: "12 February 2018"
-output: html_document
----
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_chunk$set(warning = FALSE)
-knitr::opts_chunk$set(message = FALSE)
-knitr::opts_chunk$set(error = FALSE)
-knitr::opts_chunk$set(cache = TRUE)
-library(tidyverse)
-library(data.table)
-```
+# Joining data from the Understanding Society {#joining}
 
 At home you read ch.13 on Relational Data from R for Data Science -- http://r4ds.had.co.nz/relational-data.html. Let us see how we can apply this to the Understanding Society data.
 
-# Joining waves 1 and 2
+## Joining waves 1 and 2
 
 I will start with joining data from waves 1 and 2 and then expand the algorithm to all the seven waves. First we need to read the data into R.
 
 I am using the fundtion **read_tsv()** from the **readr** package here since the data are tab separated.
 
 ```{r}
+# First I attach the packages I will use later. You need to install these packages first.
+library(tidyverse)
+library(data.table)
+library(reshape2)
+
 UndSoc1 <- read_tsv("data/UKDA-6614-tab/tab/us_w1/a_indresp.tab")
 UndSoc2 <- read_tsv("data/UKDA-6614-tab/tab/us_w2/b_indresp.tab")
 
@@ -150,7 +140,7 @@ head(full)
 
 We have missing values for wave 1 variable for those people who joined in wave 2.
 
-# Joining waves 1 to 7
+## Joining waves 1 to 7
 
 Now let us join data from all seven waves. The challenge here is that we do not want to do every operation seven times so we may want to use some iterative tools that we learned last week.
 
