--- a/tidyData.Rmd
+++ b/tidyData.Rmd
@@ -1,20 +1,4 @@
----
-title: "Tidy data"
-author: "Alexey Bessudnov"
-date: "12 February 2018"
-output: html_document
----
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_chunk$set(warning = FALSE)
-knitr::opts_chunk$set(message = FALSE)
-knitr::opts_chunk$set(error = FALSE)
-knitr::opts_chunk$set(cache = TRUE)
-library(tidyverse)
-library(data.table)
-library(reshape2)
-```
+# Tidy data
 
 In the previous part of the course (joiningData.Rmd) we learned how to join together data from seven waves of the Understanding Society. Let us open this data set.
 
@@ -25,7 +9,7 @@ head(UndSoc)
 
 Now we will work on how these data can be represented and prepared for the analysis. Please read ch.12 on Tidy Data from the R for Data Science Book -- http://r4ds.had.co.nz/tidy-data.html.
 
-# Long and wide formats
+## Long and wide formats
 
 Let us keep only a few observations and columns in the data and more closely look at its structure.
 
@@ -127,7 +111,7 @@ UndSocLong <- UndSoc %>%
 UndSocLong
 ```
 
-# Cleaning the data
+## Cleaning the data
 
 Before we begin the analysis we want to make sure that the data have been cleaned and all the missing values have been correctly identified. It usually makes sense to separate the cleaning and analysis stages into separate scripts.
 
@@ -167,7 +151,7 @@ write_tsv(UndSocLongClean, "myData/all7clean.tab")
 
 ```
 
-# Homework
+## Homework
 
 To prepare for the class on 19 February please read ch. 3 (Data visualisation) from the R for Data Science book and do all the exercises -- http://r4ds.had.co.nz/data-visualisation.html
 
