moving things back to index

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,3 +1,15 @@
-# Index file
+---
+title: "Data Analysis in Social Science 3"
+author: "Alexey Bessudnov"
+date: "`r Sys.Date()`"
+site: bookdown::bookdown_site
+output: bookdown::gitbook
+documentclass: book
+link-citations: yes
+github-repo: abessudnov/dataanalysis3
+description: "A website for the Data Analysis in Social Science 3 module."
+---
+
+# Index
 
 Some text here.
