--- a/index.Rmd
+++ b/index.Rmd
@@ -3,11 +3,29 @@ title: "Data Analysis in Social Science 3"
 author: "Alexey Bessudnov"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
-output: bookdown::gitbook
+output:
+        bookdown::gitbook:
+                config:
+                        toc:
+                                collapse: section
+                                scroll_highlight: yes
+                                before: null
+                                after: null
+                         toolbar:
+                                position: fixed
+                        edit : null
+                        download: null
+                        search: yes
+                        fontsettings:
+                                theme: white
+                                family: sans
+                                size: 2
+                        sharing: null
 documentclass: book
 link-citations: yes
 github-repo: abessudnov/dataanalysis3
 description: "A website for the Data Analysis in Social Science 3 module."
+url: "http://abessudnov.net/dataanalysis3"
 ---
 
 # Index
