add google analytics

--- a/index.Rmd
+++ b/index.Rmd
@@ -5,6 +5,8 @@ date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 output:
     bookdown::gitbook:
+        includes:
+          in_header: [google_analytics.html]
         config:
             toc:
                 collapse: section
